- cqrs write application layer created. - cqrs write Infrastructure layer modified for di principles.

--- a/src/write/CQRS.Write.Infrastructure/CQRS.Write.Infrastructure.csproj
+++ b/src/write/CQRS.Write.Infrastructure/CQRS.Write.Infrastructure.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CQRS.Write.Application\CQRS.Write.Application.csproj" />
     <ProjectReference Include="..\CQRS.Write.Domain\CQRS.Write.Domain.csproj" />
   </ItemGroup>
 
