--- a/src/consumers/CQRS.CategoryConsumer.App/CQRS.CategoryConsumer.App.csproj
+++ b/src/consumers/CQRS.CategoryConsumer.App/CQRS.CategoryConsumer.App.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="MassTransit" Version="7.3.1" />
     <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="7.3.1" />
+    <PackageReference Include="NEST" Version="7.16.0" />
   </ItemGroup>
 
 </Project>
