move categoy read porject

--- a/src/read/category/CQRS.ReadCategory.Api/CQRS.ReadCategory.Api.csproj
+++ b/src/read/category/CQRS.ReadCategory.Api/CQRS.ReadCategory.Api.csproj
@@ -7,4 +7,6 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-  </ItemGroup></Project>
+  </ItemGroup>
+
+</Project>
